--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "^1.3.5",
+    "@types/bun": "^1.3.9",
     "@types/compression": "^1.8.1",
     "@types/express": "^5.0.6"
   },
@@ -11,9 +11,11 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.26.0",
     "compression": "^1.8.1",
     "express": "^5.2.1",
-    "puppeteer": "^24.34.0"
+    "puppeteer": "^24.37.3",
+    "zod": "^4.3.6"
   },
   "scripts": {
     "start": "bun build ./index.ts --target=node --outdir=build && node ./build/index.js"
