--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
+    "@biomejs/biome": "^2.4.4",
     "@types/bun": "^1.3.9",
     "@types/compression": "^1.8.1",
     "@types/express": "^5.0.6"
@@ -12,12 +13,15 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.26.0",
+    "async-mutex": "^0.5.0",
     "compression": "^1.8.1",
     "express": "^5.2.1",
-    "puppeteer": "^24.37.4",
+    "puppeteer": "^24.37.5",
     "zod": "^4.3.6"
   },
   "scripts": {
-    "start": "bun build ./index.ts --target=node --outdir=build && node ./build/index.js"
+    "start": "bun build ./index.ts --target=node --outdir=build && node ./build/index.js",
+    "check": "biome check .",
+    "lint": "biome check --write ."
   }
 }
