chore: switch to Bun runtime and simplify Dockerfile
Use bun run directly instead of building to Node. Add bun build --compile
for standalone binary. Switch Docker runtime image to official
ghcr.io/puppeteer/puppeteer (Chrome pre-installed), removing the npm
install workaround. Update .gitignore and .dockerignore for dist/.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "zod": "^4.3.6"
   },
   "scripts": {
-    "start": "bun build ./index.ts --target=node --outdir=build && node ./build/index.js",
+    "start": "bun run index.ts",
+    "build": "bun build --compile ./index.ts --outfile=dist/puppeteerproxy",
     "check": "biome check .",
     "lint": "biome check --write ."
   }
